# Empirical-Evaluation-of-Primitives-in-MAPF-with-Kinodynamic-Constraints-

./: .gdb_history  .gitignore  CMakeLists.txt  README.md  peda-session-16128.txt
Examples/: Example.json  Example_log.json  config.json  example.xml  example_log.xml
Examples/Тесты_PBS/Article_task/2 | Deadlock | analogie Figure_1/: Example.json  Example_log.json
Examples/Тесты_PBS/Article_task/2 | power_of_priority | Figure_2/: Example.json  Example_log.json
Examples/Тесты_PBS/Article_task/2 | well_formed | Figure_3/: Example.json  Example_log.json
Examples/Тесты_PBS/Article_task/3 | Figure_4/: Example.json  Example_log.json
Examples/Тесты_PBS/Easy_task/3 | crossroads/: Example.json  Example_log.json
Examples/Тесты_PBS/Easy_task/3 | end_point conflict/: Example.json  Example_log.json
Examples/Тесты_PBS/Easy_task/4 | random_example/: Example.json  Example_log.json
Examples/Тесты_PBS/lab_task/10 | lab_task_6/: Example_log.json
Examples/Тесты_PBS/lab_task/4 | lab_task_0/: Example.json  Example_log.json
Examples/Тесты_PBS/lab_task/5 | lab_task_1/: Example.json  Example_log.json
Examples/Тесты_PBS/lab_task/6 | lab_task_2/: Example.json  Example_log.json
Examples/Тесты_PBS/lab_task/7 | lab_task_3/: Example.json  Example_log.json
Examples/Тесты_PBS/lab_task/8 | lab_task_4/: Example.json  Example_log.json
Examples/Тесты_PBS/lab_task/9 | lab_task_5/: Example.json  Example_log.json
Instances/Boston_0_256.map-scen-random/scen-random/: .Boston_0_256.map.swp  .~lock.psb_results.csv#
Src/: ASearch.pro  Agent.cpp  Agent.h  AgentInterval.h  Asearch  CMakeLists.txt  Config.cpp  Config.h  Constants.h  Future Modification  Heap.cpp  Heap.h  JsonLogger.cpp  JsonLogger.h  Map.cpp  Map.h  Mission.cpp  Mission.h  Move.h  Node.cpp  Node.h  PTNode.h  Parse.cpp  Parse.h  Pbs.cpp  Pbs.h  Primitive.h  Searchresult.h  Sipp-ip.cpp  Sipp-ip.h  Tasks.cpp  Tasks.h  agent.cpp  agent.h  astar.cpp  astar.h  config.cpp  dynobs.cpp  dynobs.h  gl_const.h  (+19 more)
